k8s/chatbot-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-service
  namespace: microservices # Bắt buộc phải có dòng này
  labels:
    app: chatbot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-service
  template:
    metadata:
      labels:
        app: chatbot-service
    spec:
      containers:
        - name: chatbot-service
          # Thay YOUR_PROJECT_ID bằng ID project thật của bạn
          image: asia-southeast1-docker.pkg.dev/btl-ecommerce-prod-480516/microservices-repo/chatbot-service:latest
          ports:
            - containerPort: 8080

          # Cấu hình biến môi trường
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          # Health Check (Giúp K8s biết khi nào app sẵn sàng nhận request)
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
