k8s/k8s-mysql-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-order
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-order
  template:
    metadata:
      labels:
        app: mysql-order
    spec:
      containers:
        - name: mysql-order
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: mysql-order-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-order-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-order
spec:
  selector:
    app: mysql-order
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
