k8s/k8s-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.global-static-ip-name: keycloak-ingress-ip
    networking.gke.io/managed-certificates: keycloak-certificate
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: ecommerce.laptrinhwp.id.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
